# FASTUrduGuard

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: aggregate.yml
configs/: datasets.yaml  models.yaml
coordinator/: README.md  manifest.json
data/processed/: unified_summary.json
data/processed/shards/: shards_summary.json
docs/: ENVIRONMENT.md  FastUrduGuard_Presentation.pptx  PIPELINE.md
results/: .gitkeep
results/rank_0/checkpoints/deberta-v3-base/: adapter_config.json  adapter_model.safetensors
results/rank_0/metrics/: deberta-v3-base.json  distilbert-multi.json  mbert.json  summary.json  timings.json
results/rank_1/metrics/: roberta-base.json  summary.json  timings.json  xlm-roberta-base.json  xlnet-base.json
scripts/: aggregate.py  benchmark.py  benchmark_intra_node.py  build_presentation.py  explain_demo.py  node_fedavg.py  node_train.py  prepare_data.py  push_artifacts.py
src/fasturduguard/: __init__.py  utils.py
src/fasturduguard/agg/: __init__.py  aggregate.py  ensemble.py  plots.py
src/fasturduguard/coord/: __init__.py  git_helper.py  manifest.py
src/fasturduguard/data/: __init__.py  loaders.py  relabel.py  shards.py  unify.py
src/fasturduguard/explain/: __init__.py  attention.py  lime_expl.py  visualize.py
src/fasturduguard/infer/: __init__.py  pipeline.py
src/fasturduguard/preprocess/: __init__.py  clean.py  normalize.py  pipeline.py  roman_urdu.py
src/fasturduguard/train/: __init__.py  fedavg.py  profile.py  run.py  trainer.py
tests/: test_smoke.py
(+3 files in other folders)
